--- a/web-site for me/index.css
+++ b/web-site for me/index.css
@@ -22,7 +22,7 @@ h1{
 
 .pro{
     font-weight: bolder;
-    color: #A0DEFF;
+    color: #545454;
     font-size: 4.5rem;
 }
 
@@ -37,3 +37,66 @@ h1{
     margin-top: 0px;
     margin-bottom: 20px;
 }
+
+#drum >#title{
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+  
+.w {
+    background-image: url(./img/crash.png);
+  }
+  
+.a {
+    background-image: url(./img/kick.png);
+  }
+  
+.s {
+    background-image: url(./img/snare.png);
+  }
+  
+.d {
+    background-image: url(./img/tom1.png);
+  }
+  
+.j {
+    background-image: url(./img/tom2.png);
+  }
+  
+.k {
+    background-image: url(./img/tom3.png);
+  }
+  
+.l {
+    background-image: url(./img/tom4.png);
+  }
+  
+.set {
+    margin: 10% auto;
+  }
+  
+.game-over {
+    background-color: #B3C2D5;
+    opacity: 0.8;
+  }
+  
+.drum {
+    outline: none;
+    border: 10px solid #404B69;
+    font-size: 5rem;
+    font-family: 'Arvo', cursive;
+    line-height: 2;
+    font-weight: 900;
+    color: #B3C2D5;
+    text-shadow: 3px 0 #545454;
+    border-radius: 15px;
+    display: inline-block;
+    width: 150px;
+    height: 150px;
+    text-align: center;
+    margin: 10px;
+    background-color: white;
+  }
+  
