--- a/web-site for me/index.css
+++ b/web-site for me/index.css
@@ -44,6 +44,11 @@ h1{
   margin-bottom: 50px;
 }
 
+.pressed {
+  box-shadow: 0 3px 4px 0 #DBEDF3;
+  opacity: 0.5;
+}
+
   
 .w {
     background-image: url(./img/crash.png);
@@ -84,7 +89,7 @@ h1{
   
 .drum {
     outline: none;
-    border: 10px solid #404B69;
+    border: 5px solid #545454;
     font-size: 5rem;
     font-family: 'Arvo', cursive;
     line-height: 2;
