Added footer and header to home page

--- a/BackEnd/WebBlog/views/pages/home.ejs
+++ b/BackEnd/WebBlog/views/pages/home.ejs
@@ -6,12 +6,12 @@
         <title>Blog Home</title>
     </head>
     <body>
-        <!--nav bar-->
+        <%- include('../partials/header')%>
         <h1>Welcome to my Blog</h1>
         <ul>
             
         </ul>
 
-        <!--footer-->
+        <%- include('../partials/header')%>
     </body>
 </html>
