Added footer and header to post pages

--- a/BackEnd/WebBlog/views/pages/home.ejs
+++ b/BackEnd/WebBlog/views/pages/home.ejs
@@ -7,11 +7,12 @@
     </head>
     <body>
         <%- include('../partials/header')%>
+
         <h1>Welcome to my Blog</h1>
         <ul>
             
         </ul>
 
-        <%- include('../partials/header')%>
+        <%- include('../partials/footer')%>
     </body>
 </html>
