--- a/BackEnd/WebBlog/views/pages/post2.ejs
+++ b/BackEnd/WebBlog/views/pages/post2.ejs
@@ -8,7 +8,7 @@
     <body>
         <%- include('../partials/header')%>
 
-        <h1>Welcome to my Blog</h1>
+        <h1>Using MERN Stack</h1>
 
         <%- include('../partials/footer')%>
     </body>
