--- a/BackEnd/WebBlog/views/pages/post1.ejs
+++ b/BackEnd/WebBlog/views/pages/post1.ejs
@@ -8,7 +8,9 @@
     <body>
         <%- include('../partials/header')%>
 
-        <h1>Welcome to my Blog</h1>
+        <h1><%= post.title %></h1>
+
+        <p>text</p>
 
         <%- include('../partials/footer')%>
     </body>
