--- a/BackEnd/WebBlog/views/partials/footer.ejs
+++ b/BackEnd/WebBlog/views/partials/footer.ejs
@@ -1,3 +1,3 @@
 <footer>
-    <p>Copyright © <%= new Date().getFullYear() %> class="copyright"> Made with ❤️ in London.</p>
+    <p>Copyright © <%= new Date().getFullYear() %>  Made with ❤️ in London.</p>
 </footer>
