--- a/BackEnd/WebBlog/views/pages/post1.ejs
+++ b/BackEnd/WebBlog/views/pages/post1.ejs
@@ -13,6 +13,23 @@
 
         <p>text</p>
 
+        <h2> Add a Comment </h2>
+        <form action="/comment/<%= post.id %>" method="post">
+         <input type="text" name="comment" placeholder="Type your comment here">
+         <button type="submit"> Submit Comment </button>
+        </form>
+
+        <% if(post.comments && post.comments.length > 0) {%>
+            <h2>Comments:</h2>
+            <ul>
+                <% post.comments.forEach((comment) => { %>
+                    
+                    <li><%= comment %></li>
+
+                <% }); %>
+            </ul>
+            <% } %>
+
         <%- include('../partials/footer')%>
     </body>
 </html>
