Added styles to header and footer

--- a/BackEnd/WebBlog/views/pages/error.ejs
+++ b/BackEnd/WebBlog/views/pages/error.ejs
@@ -1,9 +1,1 @@
-
-<%- include('../partials/header')%>
-<body>
-    <div class="pictureFail">
-        
-    </div>
-</body>
-
-<%- include('../partials/footer')%>
+<h1>Error</h1>
