--- a/BackEnd/WebBlog/views/partials/header.ejs
+++ b/BackEnd/WebBlog/views/partials/header.ejs
@@ -17,9 +17,11 @@
             <% if(isAuthenticated) { %>
                 <a href="/">Logout</a>
             <% } else { %>
-                <a href="/login">Login</a>
+                <li><a href="/login">Login</a></li>
             <% } %>
         </ul>
     </nav>
 </header>
 <main>
+
+    
