--- a/BackEnd/WebBlog/public/styles/style.css
+++ b/BackEnd/WebBlog/public/styles/style.css
@@ -1,20 +1,39 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-  }
-  
-  i {
-    margin-right: 10px;
-  }
-
 html, body {
   height: 100%;
 }
 
-.pictureFail {
-  background-image: url('https://img.freepik.com/free-vector/404-error-with-cute-animal-concept-illustration_114360-1931.jpg?w=826&t=st=1718162642~exp=1718163242~hmac=2c304078120551cafcbcd6acae55a8aaa0cd0240cbb209d5cc89f54dfcb95707');
+header {
+  background-color: #3586ff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 0 15px 0 black;
+  justify-content: flex-end;
+}
+
+header * {
+  display: inline;
+  flex: 0 0 auto;
+}
+
+header li {
+  margin: 20px;
+  font-size: 1.2em;
+}
+
+header li a {
+  color: #ccc;
+  text-decoration: none;
+}
+
+main {
+  text-align: center;
+  padding: 10vmin;
+  flex: 1 0 auto;
 }
 
 body {
@@ -23,85 +42,22 @@ body {
   justify-content: stretch;
 }
 
-header, footer {
-  flex: 0 0 auto;
-}
-
-main {
-  text-align: center;
-  padding: 5vmin;
-  flex: 1 0 auto;
-}
-
 h1 {
   text-align: center;
 }
 
-  @media (min-width: 992px) {
-    .navbar-expand-custom {
-      -ms-flex-flow: row nowrap;
-      flex-flow: row nowrap;
-      -ms-flex-pack: start;
-      justify-content: flex-start;
-    }
-    .navbar-expand-custom .navbar-nav {
-      -ms-flex-direction: row;
-      flex-direction: row;
-    }
-    .navbar-expand-custom .navbar-toggler {
-      display: none;
-    }
-    .navbar-expand-custom .navbar-collapse {
-      display: -ms-flexbox !important;
-      display: flex !important;
-      -ms-flex-preferred-size: auto;
-      flex-basis: auto;
-    }
-  }
-  
-  @media (max-width: 991px) {
-    #navbarSupportedContent ul li a {
-      padding: 12px 30px;
-    }
-    .hori-selector {
-      margin-top: 0px;
-      margin-left: 10px;
-      border-radius: 0;
-      border-top-left-radius: 25px;
-      border-bottom-left-radius: 25px;
-    }
-    .hori-selector .left,
-    .hori-selector .right {
-      right: 10px;
-    }
-    .hori-selector .left {
-      top: -25px;
-      left: auto;
-    }
-    .hori-selector .right {
-      bottom: -25px;
-    }
-    .hori-selector .left:before {
-      left: -25px;
-      top: -25px;
-    }
-    .hori-selector .right:before {
-      bottom: -25px;
-      left: -25px;
-    }
-  }
-  
-  footer {
+footer {
     position: relative;
     width: 100%;
     background: #3586ff;
-    min-height: 100px;
+    min-height: 50px;
     padding: 20px 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: white;
+    text-align: center;
   }
   
   footer .social_icon,
@@ -110,7 +66,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 10px 0;
+    margin: 5px 0;
   }
   
   footer .social_icon li,
@@ -118,7 +74,7 @@ h1 {
     list-style: none;
   }
   footer .social_icon li a {
-    font-size: 2em;
+    font-size: 1.5em;
     color: #ccc;
     margin: 0 10px;
     display: inline-block;
@@ -126,22 +82,9 @@ h1 {
   }
   footer .social_icon li a:hover {
     transform: translateY(-15px);
-    color: blue;
+    color: #3586ff;
   }
-  
-  footer .menu li a {
-    font-size: 1.2em;
-    color: #ccc;
-    margin: 0 10px;
-    display: inline-block;
-    transition: 0.5s;
-    text-decoration: none;
-    opacity: 0.75;
-  }
-  footer .menu li a:hover {
-    opacity: 1;
-    color: #fff;
-  }
+
   p {
     color: whtie;
     text-align: center;
@@ -149,64 +92,3 @@ h1 {
     margin-bottom: 10px;
     font-size: 1.1em;
   }
-  
-  .copyright {
-    color: white;
-  }
-  
-  /*wave and animation*/
-  footer .wave {
-    position: absolute;
-    top: -100px;
-    left: 0;
-    width: 100%;
-    height: 100px;
-    background: url(https://i.ibb.co/rZt4Nhg/wave.png);
-    background-size: 1000px 100px;
-  }
-  
-  footer .wave#wave1 {
-    z-index: 1000;
-    opacity: 1;
-    bottom: 0;
-    animation: animateWave 4s linear infinite;
-  }
-  
-  footer .wave#wave2 {
-    z-index: 999;
-    opacity: 0.5;
-    bottom: 10px;
-    animation: animateWave_02 4s linear infinite;
-  }
-  footer .wave#wave3 {
-    z-index: 1000;
-    opacity: 0.2;
-    bottom: 0;
-    animation: animateWave 3s linear infinite;
-  }
-  
-  footer .wave#wave4 {
-    z-index: 999;
-    opacity: 0.7;
-    bottom: 20px;
-    animation: animateWave_02 3s linear infinite;
-  }
-  
-  @keyframes animateWave {
-    0% {
-      background-position-x: 1000px;
-    }
-    100% {
-      background-position-x: 0px;
-    }
-  }
-  
-  @keyframes animateWave_02 {
-    0% {
-      background-position-x: 0px;
-    }
-    100% {
-      background-position-x: 1000px;
-    }
-  }
-  
