--- a/BackEnd/WebBlog/views/pages/home.ejs
+++ b/BackEnd/WebBlog/views/pages/home.ejs
@@ -1,15 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blog : Homepage</title>
 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/home.css">
+
+</head>
+<body>
     <%- include('../partials/header')%>
-
-        <h1>Welcome to my Blog</h1>
-        <section03>
-            <div class="container-fluid">
-              <div class="row">
-                    <img src="/img/main.jpg"/>
-            </div>
-          </div>
-        </section03>
-
         <ul>
             <% blogPosts.forEach((post) => { %>
                 <li><a href="/pages/<%=post.id %>"><%=post.title %></a></li>
@@ -17,5 +19,12 @@
         </ul>
 
         <%- include('../partials/footer')%>
-    </body>
+
+<script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-firestore.js"></script>
+
+<script src="js/firebase.js"></script>
+<script src="js/home.js"></script>
+
+</body>
 </html>
