--- a/BackEnd/WebBlog/views/partials/header.ejs
+++ b/BackEnd/WebBlog/views/partials/header.ejs
@@ -1,27 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blog</title>
-        <link rel="stylesheet" href="/styles/style.css">
-    </head>
-    <body>
-<header>
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="#">About Me</a></li>
 
-            <% if(isAuthenticated) { %>
-                <li><a href="#">Make Post</a></li>
-                <li><a href="/">Logout</a></li>
-            <% } else { %>
-                <li><a href="/login">Login</a></li>
-            <% } %>
-        </ul>
-    </nav>
-</header>
-<main>
+<nav class="navbar">
 
-    
+        <img src="img/blog_icon.png" class="logo" height="30" alt="blog icon">
+
+            <ul class="links-container">
+
+                <li class="link"><a href="/">Home</a></li>
+
+                <li class="link"><a href="#">About Me</a></li>
+
+                <% if(isAuthenticated) { %>
+
+                    <li class="link"><a href="/editor">Make Post</a></li>
+
+                    <li class="link"><a href="/">Logout</a></li>
+                    
+                <% } else { %>
+
+                    <li class="link"><a href="/login">Login</a></li>
+
+                <% } %>
+            </ul>
+        </nav>
+    <header class="header">
+        <div class="content">
+            <h1 class="heading">
+                <span class="small">welcome in the world of</span>
+                blog
+                <span class="no-fill">writing</span>
+            </h1>
+            <a href="/editor" class="btn">write a blog</a>
+        </div>
+    </header>
