--- a/BackEnd/WebBlog/views/pages/editor.ejs
+++ b/BackEnd/WebBlog/views/pages/editor.ejs
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+    <%- include('../partials/header')%>
 
     <div class="banner">
         <input type="file" accept="image/*" id="banner-upload" hidden>
@@ -27,12 +28,11 @@
         <input type="file" accept="image/*" id="image-upload" hidden>
         <label for="image-upload" class="btn grey upload-btn">Upload Image</label>
     </div>
-
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-firestore.js"></script>
 
     <script src="js/firebase.js"></script>
     <script src="js/editor.js"></script>
-
+  
 </body>
 </html>
