--- a/BackEnd/WebBlog/views/pages/home.ejs
+++ b/BackEnd/WebBlog/views/pages/home.ejs
@@ -12,6 +12,17 @@
 </head>
 <body>
     <%- include('../partials/header')%>
+    
+    <header class="header">
+        <div class="content">
+            <h1 class="heading">
+                <span class="small">welcome in the world of</span>
+                blog
+                <span class="no-fill">writing</span>
+            </h1>
+            <a href="/editor" class="btn">write a blog</a>
+        </div>
+    </header>
         <ul>
             <% blogPosts.forEach((post) => { %>
                 <li><a href="/pages/<%=post.id %>"><%=post.title %></a></li>
