--- a/BackEnd/WebBlog/views/pages/login.ejs
+++ b/BackEnd/WebBlog/views/pages/login.ejs
@@ -14,18 +14,34 @@
 <body>
 
 <%- include('../partials/header')%>
-<header>
-        <div class="content">
-            <h1 class="heading">
-                <span class="small">Login</span>
-                to
-                <span class="no-fill">Blog</span>
-            </h1>
-            <form action="/login" method="post">
-                
-                <input type="text" name="username" placeholder="Username" required>
-                <input type="password" name="password" placeholder="Password" required>
 
-                <button type="submit" class="btn">Login</button>
-            </form>
+<header>
+    <div class="wrapper">
+        <form action="/login" method="post">
+          <h1 class="heading">
+              <span class="small">Login</span>
+              to
+              <span class="no-fill">Blog</span>
+          </h1>
+            <div class="input-field">
+            <input type="text" name="email" required>
+            <label>Enter your email</label>
+          </div>
+          <div class="input-field">
+            <input type="password" name="password" required>
+            <label>Enter your password</label>
+          </div>
+          <div class="forget">
+            <label for="remember">
+              <input type="checkbox" id="remember">
+              <p>Remember me</p>
+            </label>
+            <a href="#">Forgot password?</a>
+          </div>
+          <button type="submit">Log In</button>
+          <div class="register">
+            <p>Don't have an account? <a href="#">Register</a></p>
+          </div>
+        </form>
+      </div>
 </header>
