Added logout request

--- a/BackEnd/WebBlog/views/partials/header.ejs
+++ b/BackEnd/WebBlog/views/partials/header.ejs
@@ -13,7 +13,7 @@
 
                     <li class="link"><a href="/editor">Make Post</a></li>
 
-                    <li class="link"><a href="/">Logout</a></li>
+                    <li class="link"><a href="/logout">Logout</a></li>
                     
                 <% } else { %>
 
