--- a/BackEnd/WebBlog/public/styles/login.css
+++ b/BackEnd/WebBlog/public/styles/login.css
@@ -12,7 +12,7 @@ body{
     font-family: 'poppins', sans-serif;
     margin-top: 60px;
     height: calc(100vh - 80px);
-    background: url(/img/main.jpg);
+    background: url(/img/main1.jpg);
     background-size: cover;
     display: flex;
     justify-content: center;
