--- a/BackEnd/WebBlog/public/styles/home.css
+++ b/BackEnd/WebBlog/public/styles/home.css
@@ -43,6 +43,16 @@ body{
     color: #000;
 }
 
+.error
+{
+    
+    background: url(/img/error.jpg);
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .link a {
     text-decoration: none; /* Remove underline from links */
     color: #686D76; /* Text color */
