--- a/BackEnd/WebBlog/views/pages/editor.ejs
+++ b/BackEnd/WebBlog/views/pages/editor.ejs
@@ -13,19 +13,20 @@
 <body>
     <%- include('../partials/header')%>
 
+<form action="/publish" method="post">
+
     <div class="banner">
         <input type="file" accept="image/*" id="banner-upload" hidden>
         <label for="banner-upload" class="banner-upload-btn"><img src="img/upload.png" alt="upload banner"></label>
     </div>
     
- <form action="/publish" method="post" enctype="multipart/form-data">
     <div class="blog">
         <textarea type="text" class="title" name="title" placeholder="Blog title..." required></textarea>
         <textarea type="text" class="article" name="article" placeholder="Start writing here..." required></textarea>
     </div>
 
     <div class="blog-options">
-        <button class="btn dark publish-btn">Publish</button>
+        <button class="btn dark publish-btn" type="submit">Publish</button>
         <input type="file" accept="image/*" id="image-upload" hidden>
         <label for="image-upload" class="btn grey upload-btn">Upload Image</label>
     </div>
