Added image info to data.blog json

--- a/BackEnd/WebBlog/views/pages/editor.ejs
+++ b/BackEnd/WebBlog/views/pages/editor.ejs
@@ -26,9 +26,9 @@
     </div>
 
     <div class="blog-options">
-        <button class="btn dark publish-btn" type="submit">Publish</button>
+        <button class="btn dark publish-btn" for="image-upload" type="submit">Publish</button>
         <input type="file" accept="image/*" id="image-upload" hidden>
-        <label for="image-upload" class="btn grey upload-btn">Upload Image</label>
+        <!-- <label for="image-upload" class="btn grey upload-btn">Upload Image</label> -->
     </div>
 </form>
 
