--- a/BackEnd/WebBlog/views/pages/error.ejs
+++ b/BackEnd/WebBlog/views/pages/error.ejs
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog : Homepage</title>
-
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/home.css">
-
+    <title>Error</title>
+    <link rel="stylesheet" href="styles/error.css">
 </head>
-<body>
-    <%- include('../partials/header')%>
-    
 
-        <%- include('../partials/footer')%>
-    </body>
+	<body>
+		<div class="full-page-image">
+			<div class="content">
+
+
+			</div>
+		</div>
+	</body>
+
 </html>
