--- a/BackEnd/WebBlog/views/pages/editor.ejs
+++ b/BackEnd/WebBlog/views/pages/editor.ejs
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="/styles/home.css">
     <link rel="stylesheet" href="/styles/editor.css">
+    <link rel="stylesheet" href="./styles/search-bar.css">
 
 </head>
 <body>
