--- a/BackEnd/WebBlog/views/partials/header.ejs
+++ b/BackEnd/WebBlog/views/partials/header.ejs
@@ -25,11 +25,11 @@
 
           <div class="search">
 
-            <textarea class="searchTerm" name="search" placeholder="Search..."></textarea>
+            <input class="searchTerm" name="search" placeholder="Search...">
 
             <button type="submit" class="searchButton">
 
-              <i class="fa fa-search"></i> Ok
+               Ok
               
             </button>
           </div>
