--- a/BackEnd/WebBlog/public/styles/post.css
+++ b/BackEnd/WebBlog/public/styles/post.css
@@ -1,100 +1,51 @@
-.banner{
+/* home.css */
+.blog-banner {
     width: 100%;
-    height: 400px;
-    position: relative;
-    background: #e7e7e7;
-    background-size: cover;
-    background-position: center;
-}
-
-.banner-upload-btn{
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background: rgba(0, 0, 0, 0.1);
     display: flex;
-    justify-content: center;
     align-items: center;
-    cursor: pointer;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
 }
 
-.banner-upload-btn img{
-    width: 20px;
-}
-
-.blog{
-    width: 70vw;
-    min-width: 400px;
-    height: 100px;
-    display: block;
-    margin: auto;
-    padding: 50px 0;
-}
-
-textarea::-webkit-scrollbar{
-    width: 10px;
-}
-
-textarea::-webkit-scrollbar-thumb{
-    background: rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-}
-
-.title,
-.article{
+.blog-banner img {
     width: 100%;
-    min-height: 100px;
     height: auto;
-    outline: none;
-    font-size: 50px;
-    font-weight: 600;
-    color: #2d2d2d;
-    resize: none;
-    border: none;
-    padding: 10px;
-    border-radius: 10px;
+    max-height: 100vh; /* Ensures the image does not exceed the viewport height */
 }
 
-.title::placeholder,
-.article::placeholder{
-    color: #2d2d2d;
+.blog {
+    padding: 2rem 5vw;
+    max-width: 800px;
+    margin: 0 auto;
 }
 
-.article{
-    height: 500px;
-    font-size: 20px;
-    margin-top: 20px;
-    line-height: 30px;
-    font-weight: 500;
-    padding-bottom: 100px;
+.blog-title {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    text-align: left;
+    color: #333;
+}
+
+.blog-article {
+    font-size: 1rem;
+    line-height: 1.6;
+    text-align: left;
+    color: #333;
     white-space: pre-wrap;
 }
 
-.blog-options{
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 60px;
-    background: #fff;
-    z-index: 9;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+@media screen and (min-width: 768px) {
+    .blog {
+        padding: 3rem 5vw;
+    }
 
-.btn{
-    border: none;
-    outline: none;
-    cursor: pointer;
-}
+    .blog-title {
+        font-size: 2.5rem;
+    }
 
-.btn.grey{
-    background: #a5a5a5;
-    color: #fff;
-    margin-left: 20px;
-    font-size: 14px;
+    .blog-article {
+        font-size: 1.125rem;
+    }
 }
