--- a/BackEnd/WebBlog/public/styles/post.css
+++ b/BackEnd/WebBlog/public/styles/post.css
@@ -49,3 +49,57 @@
         font-size: 1.125rem;
     }
 }
+
+.comments {
+    margin-top: 20px;
+    max-width: 600px; 
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 20px; }
+
+.comments h2 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.comments form {
+    display: flex;
+    flex-direction: column;
+}
+
+.comments input[type="text"] {
+    padding: 10px;
+    font-size: 1em;
+    margin-bottom: 10px;
+    border: 0.1px solid #e0e0e0;
+    border-radius: 4px;
+}
+
+.comments button[type="submit"] {
+    padding: 5px 10px;
+    border-radius: 5px;
+    border: 0.5px solid rgba(174, 171, 171, 0.773);
+    background: rgba(255, 255, 255, 0.81);
+    color: #000;
+    text-decoration: none;
+    text-transform: capitalize;
+    cursor: pointer;
+    transition: background 0.3s ease, color 0.3s ease; 
+    align-self: flex-end; 
+}
+
+.comments button[type="submit"]:hover {
+    background: rgba(72, 152, 92, 0.584);
+    color: #fff;
+}
+
+.comments ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.comments li {
+
+    margin-bottom: 10px;
+}
