--- a/BackEnd/WebBlog/public/styles/home.css
+++ b/BackEnd/WebBlog/public/styles/home.css
@@ -1,348 +1,226 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    width: 100%;
-    position: relative;
-    font-family: 'poppins', sans-serif;
+body {
+  width: 100%;
+  position: relative;
+  font-family: 'Poppins', sans-serif;
 }
 
-::selection{
-    background: #1b1b1b;
-    color: #fff;
+::selection {
+  background: #1b1b1b;
+  color: #fff;
 }
 
-.navbar{
-    width: 100%;
-    height: 60px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 5vw;
-    background: #fff;
-    z-index: 9;
-    color:#ccc;
+.header {
+  margin-top: 60px;
+  width: 100%;
+  height: calc(100vh - 80px);
+  background: url(/img/main1.jpg);
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.links-container{
-    display: flex;
-    list-style: none;
+.content {
+  text-align: center;
 }
 
-.link{
-    padding: 10px;
-    margin-left: 10px;
-    text-decoration: none;
-    text-transform: capitalize;
-    color: #000;
+.heading {
+  color: #fff;
+  text-transform: capitalize;
+  font-size: 80px;
+  line-height: 60px;
+  margin-bottom: 80px;
 }
 
-.error
-{
-    
-    background: url(/img/error.jpg);
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.heading .small {
+  display: block;
+  font-size: 40px;
 }
 
-.link a {
-    text-decoration: none; 
-    color: #686D76; 
-    padding: 10px 20px; 
-    display: block; 
-    border-radius: 4px; 
-    transition: background-color 0.3s ease; 
+.heading .no-fill {
+  font-style: italic;
+  color: transparent;
+  -webkit-text-stroke: 2px #fff;
 }
 
-.link a:hover {
-    background-color: #686D76;
-    color: white;
+.btn {
+  padding: 10px 20px;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.7);
+  color: #000;
+  text-decoration: none;
+  text-transform: capitalize;
 }
 
-.header{
-    margin-top: 60px;
-    width: 100%;
-    height: calc(100vh - 80px);
-    background: url(/img/main1.jpg);
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.btn:hover {
+  background: rgba(255, 255, 255, 0.3);
+  color: #fff;
 }
 
-.content{
-    text-align: center;
+.blogs-section {
+  width: 100%;
+  padding: 50px 5vw;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 80px;
 }
 
-.heading{
-    color: #fff;
-    text-transform: capitalize;
-    font-size: 80px;
-    line-height: 60px;
-    margin-bottom: 80px;
+.blog-image {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 10px;
 }
 
-.heading .small{
-    display: block;
-    font-size: 40px;
+.blog-overview {
+  margin: 10px 0 20px;
+  line-height: 30px;
 }
 
-.heading .no-fill{
-    font-style: italic;
-    color: transparent;
-    -webkit-text-stroke: 2px #fff;
-}
-
-.btn{
-    padding: 10px 20px;
-    border-radius: 10px;
-    background: rgba(255, 255, 255, 0.7);
-    color: #000;
-    text-decoration: none;
-    text-transform: capitalize;
-}
-
-.btn:hover
-{
-    padding: 10px 20px;
-    border-radius: 10px;
-    background: rgba(255, 255, 255, 0.299);
-    color: #fff;
-    text-decoration: none;
-    text-transform: capitalize;
-}
-
-.blogs-section{
-    width: 100%;
-    padding: 50px 5vw;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 80px;
-}
-
-.blog-image{
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-    border-radius: 10px;
-    margin-bottom: 10px;
-}
-
-.blog-overview{
-    margin: 10px 0 20px;
-    line-height: 30px;
-}
-
-.btn.dark{
-    background: #1b1b1b;
-    color: #fff;
+.btn.dark {
+  background: #1b1b1b;
+  color: #fff;
 }
 
 footer {
-    position: relative;
-    width: 100%;
-    background: #fff;
-    min-height: 40px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  footer .social_icon,
-  footer .menu {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px 0;
-  }
-  
-  footer .social_icon li,
-  footer .menu li {
-    list-style: none;
-  }
-  footer .social_icon li a {
-    font-size: 2em;
-    color: #ccc;
-    margin: 0 10px;
-    display: inline-block;
-    transition: 0.5s;
-  }
-  footer .social_icon li a:hover {
-    transform: translateY(-15px);
-    color: #A7E6FF;
-  }
-  
-  footer .menu li a {
-    font-size: 1.2em;
-    color: #ccc;
-    margin: 0 10px;
-    display: inline-block;
-    transition: 0.5s;
-    text-decoration: none;
-    opacity: 0.75;
-  }
-  footer .menu li a:hover {
-    opacity: 1;
-    color: #fff;
-  }
-  p {
-    color: whtie;
-    text-align: center;
-    margin-top: 15px;
-    margin-bottom: 10px;
-    font-size: 1.1em;
-  }
-  
-  .copyright {
-    color: white;
-  }
-
-.wrap {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #f9f9f9; 
-     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+  position: relative;
+  width: 100%;
+  background: #fff;
+  min-height: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.wrap form {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 600px; 
+footer .social_icon,
+footer .menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
 }
 
-.search {
-    display: flex;
-    border: 2px solid #ddd;
-    border-radius: 6px;
-    overflow: hidden; 
-    background-color: #fff; 
+footer .social_icon li,
+footer .menu li {
+  list-style: none;
 }
 
-.searchTerm {
-    flex: 1;
-    padding: 10px;
-    border: none; 
-    outline: none; 
-    font-size: 1rem;
-    color: #333; 
-    background-color: #fff; 
+footer .social_icon li a {
+  font-size: 2em;
+  color: #ccc;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
 }
 
-.searchTerm::placeholder {
-    color: #aaa; 
+footer .social_icon li a:hover {
+  transform: translateY(-15px);
+  color: #A7E6FF;
 }
 
-.searchButton {
-    padding: 10px 20px;
-    border: none; 
-    background-color: #ddd;
-    color: #333; 
-    cursor: pointer;
-    transition: background-color 0.3s ease; 
-    color: #333;
+footer .menu li a {
+  font-size: 1.2em;
+  color: #ccc;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
+  text-decoration: none;
+  opacity: 0.75;
 }
 
-.searchButton:hover, .searchButton:focus {
-    background-color: #686D76; 
-    color: white;
+footer .menu li a:hover {
+  opacity: 1;
+  color: #fff;
 }
 
-.searchButton i {
-    margin-right: 5px; 
+p {
+  color: white;
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  font-size: 1.1em;
 }
 
-@media (max-width: 600px) {
-    .wrap form {
-        flex-direction: column;
-    }
-    .search {
-        flex-direction: column;
-    }
-    .searchTerm, .searchButton {
-        width: 100%;
-        text-align: center;
-    }
+.copyright {
+  color: white;
 }
 
 .articles {
-    padding: 4rem 5vw;
-    position: relative; /* Ensure the parent container is relatively positioned */
-  }
-  
-  .articles__heading {
-    font-weight: 400;
-    font-size: 1.5rem;
-    color: #333;
-    margin-bottom: 2rem;
-  }
-  
-  .article-ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    font-size: 1rem;
-    flex-direction: column;
-  }
-  
-  .article-ul li {
-    display: flex; /* Use flexbox for layout */
-    justify-content: space-between; /* Distribute items horizontally */
-    align-items: center; /* Align items vertically */
-    margin-bottom: 1rem;
-    padding: 1rem;
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-    cursor: pointer;
-    position: relative; /* Ensure each list item is relatively positioned */
-  }
-  
-  .article-ul li:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  }
-  
+  padding: 4rem 5vw;
+  position: relative;
+}
+
+.articles__heading {
+  font-weight: 400;
+  font-size: 1.5rem;
+  color: #333;
+  margin-bottom: 2rem;
+}
+
+.article-ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  font-size: 1rem;
+  flex-direction: column;
+}
+
+.article-ul li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  cursor: pointer;
+  position: relative;
+}
+
+.article-ul li:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.article-ul li a {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-decoration: none;
+  margin: 5px 0;
+  color: #333;
+  flex: 1;
+}
+
+.article-ul li a:hover {
+  color: #555;
+}
+
+@media only screen and (min-width: 768px) {
   .article-ul li a {
-    display: block;
-    text-decoration: none;
-    color: #333;
-    flex: 1; /* Take up remaining space */
-    justify-content: space-between;
-  }
-  
-  .article-ul li a:hover {
-    color: #555;
-  }
-  
-  .article-ul li a {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    text-decoration: none;
-    margin: 5px 0;
-  }
-  
-  @media only screen and (min-width: 768px) {
-    .article-ul li a {
       flex-direction: row;
       align-items: center;
-    }
-  
-    .article-list__date {
-      text-align: right;
-    }
   }
+
+  .article-list__date {
+      text-align: right;
+  }
+}
+
+.error {
+  background: url(/img/error.jpg);
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
