--- a/BackEnd/WebBlog/views/pages/post.ejs
+++ b/BackEnd/WebBlog/views/pages/post.ejs
@@ -7,6 +7,7 @@
     <title>Blog : <%= post.title %></title>
     <link rel="stylesheet" href="/styles/home.css">
     <link rel="stylesheet" href="/styles/post.css">
+    <link rel="stylesheet" href="/styles/navbar.css">
 
 </head>
 <body>
