Added weather APIs

--- a/BackEnd/WebBlog/views/pages/weather.ejs
+++ b/BackEnd/WebBlog/views/pages/weather.ejs
@@ -17,11 +17,10 @@
     
     <header class="header">
         <div class="content">
-            <h1>Here is your weather:</h1>
-
-        <div> 
-            <h1>Current Weather:</h1>
             
+            <h1>Current Weather:</h1>
+
+            <p><img src="<%= icon %>" alt="icon" class="icon_code"></p>
             <p>Temperature: <%= temperature %>°C</p>
             <p>Condition: <%= weatherDescription %></p>
             <p>Wind Speed: <%= windSpeed %> m/s</p>
