Added archive NewYorkYimes articles by date

--- a/BackEnd/WebBlog/views/partials/header.ejs
+++ b/BackEnd/WebBlog/views/partials/header.ejs
@@ -6,6 +6,7 @@
         <div class="dropdown-content">
           <a href="/joke">Random Joke</a>
           <a href="/weather">Weather</a>
+          <a href="/nytimes">New York Times</a>
         </div>
       </li>
       <% if (isAuthenticated) { %>
