--- a/BackEnd/WebBlog/views/pages/weather.ejs
+++ b/BackEnd/WebBlog/views/pages/weather.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog : Joke</title>
+    <title>Blog : Weather</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/home.css">
@@ -17,8 +17,8 @@
     
     <header class="header">
         <div class="content">
-            
-            <h1>Current Weather:</h1>
+
+            <h1>Cocktail:</h1>
 
             <p><img src="<%= icon %>" alt="icon" class="icon_code"></p>
             <p>Temperature: <%= temperature %>°C</p>
