--- a/BackEnd/WebBlog/views/partials/header.ejs
+++ b/BackEnd/WebBlog/views/partials/header.ejs
@@ -8,7 +8,7 @@
           <a href="/weather">Weather</a>
           <a href="/nytimes">New York Times</a>
           <a href="/travel_tracker">Travel Tracker</a>
-          <a href="/get_stat">LeetCode tracker</a>
+          <a href="/stat">LeetCode tracker</a>
         </div>
       </li>
       <% if (isAuthenticated) { %>
