Added edit function

--- a/BackEnd/WebBlog/public/styles/stat.css
+++ b/BackEnd/WebBlog/public/styles/stat.css
@@ -74,3 +74,31 @@ body {
     background-color: #45a049;
   }
   
+  .icon {
+    width: 16px;
+    height: 16px;
+}
+
+.edit {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.add {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.add:hover {
+  background-color: #45a049;
+}
+
+.input-group {
+  display: flex;
+  align-items: center;
+}
